# kedro-sagemaker

./: .bumpversion.cfg  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .spellcheck.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: prepare-release.yml  publish.yml  test.yml  test_and_publish.yml
docs/: conf.py  index.rst  spellcheck_exceptions.txt
docs/source/: 01_intro.md  02_installation.md  03_quickstart.rst  04_development.md
kedro_sagemaker/: cli.py  cli_functions.py  client.py  config.py  constants.py  datasets.py  decorators.py  docker.py  generator.py  runner.py  utils.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_datasets.py  test_decorators.py  test_generator.py  test_runner.py  test_utils.py  utils.py
tests/conf/base/: sagemaker.yml
