[tool.poetry]
name = "kedro-sagemaker"
version = "0.2.0"
description = "Kedro plugin with AWS SageMaker Pipelines support"
readme = "README.md"
authors = ['Marcin Zabłocki <marcin.zablocki@getindata.com>']
maintainers = ['GetInData MLOPS <mlops@getindata.com>']
homepage = "https://github.com/getindata/kedro-sagemaker"
repository = "https://github.com/getindata/kedro-sagemaker"
documentation = "https://kedro-sagemaker.readthedocs.io/"
keywords = ['kedro', 'sagemaker', 'aws', 'mlops']
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta", # license and python versions added automatically
]
[tool.poetry.group.dev.dependencies]
pytest = "<7"
pytest-cov = ">=2.8.0,<4.0.0"
tox = ">=3.25.1,<4.0.0"
numpy = "^1.23.5"
pandas = "^1.5.2"
pre-commit = "^2.20.0"
recommonmark = "^0.7.1"
kedro-mlflow = "^0.11.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.isort]
known_third_party = ["pydantic","semver","setuptools"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kedro = ">=0.18.3,<0.19"
sagemaker = "^2.117.0"
zstandard = ">=0.19.0,<0.20.0"
s3fs = "^2022.11.0"
backoff = "^2.2.1"
pydantic = "^1.10.2"
cloudpickle = "^2.2.0"
tarsafe = "0.0.4"

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."kedro.project_commands"]
"sagemaker" = "kedro_sagemaker.cli:commands"
